metadata/force-app/main/default/objects/User/fields/agf__Certified_Scrum_Master__c.field-meta.xml
<CustomField>
    <fullName>agf__Certified_Scrum_Master__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certified Scrum Master</label>
    <type>Checkbox</type>
</CustomField>