metadata/force-app/main/default/objects/User/fields/agf__Initials__c.field-meta.xml
<CustomField>
    <fullName>agf__Initials__c</fullName>
    <formula>Left(FirstName, 1) + Left(LastName, 1)</formula>
    <label>Initials</label>
    <type>Text</type>
</CustomField>