metadata/force-app/main/default/objects/User/fields/agf__Notification_Level__c.field-meta.xml
<CustomField>
    <fullName>agf__Notification_Level__c</fullName>
    <inlineHelpText>Adjusts how often you are sent emails about Work.

Bread &amp; Butter:  User comments and added as an Assignee
Meat &amp; Potatoes: User comments, status changes and added as Assignee
The Whole Enchilada: All notifications (Default)</inlineHelpText>
    <label>Work Notification Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bread &amp; Butter</fullName>
            </value>
            <value>
                <fullName>Meat &amp; Potatoes</fullName>
                <default>true</default>
                <label>Meat &amp; Potatoes</label>
            </value>
            <value>
                <fullName>The Whole Enchilada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>