metadata/force-app/main/default/objects/User/fields/agf__Product_Owner_Certified_Date__c.field-meta.xml
<CustomField>
    <fullName>agf__Product_Owner_Certified_Date__c</fullName>
    <label>Product Owner Certified Date</label>
    <type>Date</type>
</CustomField>