metadata/force-app/main/default/objects/User/fields/agf__Show_All_Work_Comments__c.field-meta.xml
<CustomField>
    <fullName>agf__Show_All_Work_Comments__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show All Work Comments</label>
    <type>Checkbox</type>
</CustomField>