metadata/force-app/main/default/objects/User/fields/agf__Wall_Preference__c.field-meta.xml
<CustomField>
    <fullName>agf__Wall_Preference__c</fullName>
    <label>Wall Preference</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>