metadata/force-app/main/default/objects/User/fields/ccrz__CC_CurrencyCode__c.field-meta.xml
<CustomField>
    <fullName>ccrz__CC_CurrencyCode__c</fullName>
    <description>Customized Currency field for Orgs which don&apos;t have  Multi-currency feautre.</description>
    <label>Currency</label>
    <length>30</length>
    <type>Text</type>
</CustomField>