metadata/force-app/main/default/objects/User/fields/ccrz__CompanyType__c.field-meta.xml
<CustomField>
    <fullName>ccrz__CompanyType__c</fullName>
    <label>CompanyType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ISP</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Data Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>