metadata/force-app/main/default/objects/User/fields/ccrz__ContactTypeRole__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ContactTypeRole__c</fullName>
    <description>CloudCraze contact type role</description>
    <label>Contact Type Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Researcher/Post Doc</fullName>
                <default>true</default>
                <label>Researcher/Post Doc</label>
            </value>
            <value>
                <fullName>Purchasing Agent</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Lab Manager</fullName>
            </value>
            <value>
                <fullName>Department Chair</fullName>
            </value>
            <value>
                <fullName>Principal Investigator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>