metadata/force-app/main/default/objects/User/fields/ccrz__Tax_Exempt__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Tax_Exempt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether the current user gets qualified for the tax-exempt</description>
    <label>Tax Exempt</label>
    <type>Checkbox</type>
</CustomField>