metadata/force-app/main/default/objects/User/fields/ccrz__User_Industry__c.field-meta.xml
<CustomField>
    <fullName>ccrz__User_Industry__c</fullName>
    <description>CloudCraze user industry</description>
    <label>User Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Academic research</fullName>
                <default>true</default>
                <label>Academic research</label>
            </value>
            <value>
                <fullName>commercial</fullName>
            </value>
            <value>
                <fullName>government</fullName>
            </value>
            <value>
                <fullName>OEM-Reseller</fullName>
            </value>
            <value>
                <fullName>other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>