metadata/force-app/main/default/objects/User/fields/ccrz__User_Salutation__c.field-meta.xml
<CustomField>
    <fullName>ccrz__User_Salutation__c</fullName>
    <description>CloudCraze user salutation</description>
    <label>User Salutation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mr</fullName>
                <default>true</default>
                <label>Mr</label>
            </value>
            <value>
                <fullName>Mrs</fullName>
            </value>
            <value>
                <fullName>Ms</fullName>
            </value>
            <value>
                <fullName>Dr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>