metadata/force-app/main/default/objects/User/fields/Date_Of_First_Login__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_First_Login__c</fullName>
    <label>Date Of First Login</label>
    <type>Date</type>
</CustomField>