metadata/force-app/main/default/objects/User/fields/First_Login_Plus_14_Days__c.field-meta.xml
<CustomField>
    <fullName>First_Login_Plus_14_Days__c</fullName>
    <formula>Date_Of_First_Login__c + 14</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Login Plus 14 Days</label>
    <type>Date</type>
</CustomField>